# Internship

./: .pre-commit-config.yaml  README.md  README2.md  main.py  pyproject.toml  test.JBI
.github/workflows/: githubaction.yml  pytest.yml  static_analysis.yml
testmodule/:   .pub  EXfileparser.py  __init__.py  example.py  fileparser.py  helpers.py  jobfile.py  main.py  print.py  read.py  rule.py  submodule1.py  test.JBI  test2.JBI  write.py
testmodule/demonstrator/: DEMONSTRATOR_A1.JBI  DEMONSTRATOR_A2.JBI  DEMONSTRATOR_A3.JBI  DEMONSTRATOR_A4.JBI  DEMONSTRATOR_A5.JBI  DEMONSTRATOR_A6.JBI  DEMONSTRATOR_A7.JBI  DEMONSTRATOR_A8.JBI  DEMONSTRATOR_CALL.JBI
testmodule/files/: 1test.JBI  ADD_ID.JBI  BLOCK_MAEANDER.JBI  BLOCK_SCAN.JBI  BLOCK_STRICHRAUPEN.JBI  CALL_FACHWERK.JBI  CALL_SCAN_AREA.JBI  CHECK_DOUBLE.JBI  CHOOSE_ARG_BY_LAYER.JBI  CREATE_SHIFTED_UF.JBI  DEMONSTRATOR_A1.JBI  DEMONSTRATOR_A2.JBI  DEMONSTRATOR_A3.JBI  DEMONSTRATOR_A4.JBI  DEMONSTRATOR_A5.JBI  GET_T.JBI  (+105 more)
tests/: B_error.JBI  C_error_4.JBI  D_error_10.JBI  D_error_2.JBI  D_error_3.JBI  D_error_4.JBI  D_error_5.JBI  D_error_6.JBI  E_error_1.JBI  E_pass.JBI  F_error_1.JBI  F_error_2.JBI  F_error_7.JBI  F_error_8.JBI  F_pass.JBI  G_error_2.JBI  H_error_13.JBI  H_error_14.JBI  H_error_2.JBI  H_error_4.JBI  H_error_5.JBI  H_error_9.JBI  test_checks.py  test_jobfile.py  w1_error.JBI  w1_pass.JBI  w2_pass.JBI  w3_error_1.JBI  w3_error_2.JBI  w3_error_3.JBI  w3_error_4.JBI  w3_pass.JBI  w4_error_1.JBI  w4_error_4.JBI  w4_error_5.JBI  w4_error_7.JBI  w4_error_8.JBI  w4_error_9.JBI  w4_pass.JBI  w5_error_2.JBI  (+17 more)
(+4 files in other folders)
