[project]
name = "testmodule"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]

[project.optional-dependencies]
test = [
    "pytest >=6",
    "pytest-cov",
]

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
  "D",   # pydocstyle
]

[tool.ruff.pydocstyle]
convention = "numpy"

# pytest configuration
[tool.pytest.ini_options]
addopts = "--tb=auto --color=yes -rsw --cov=testmodule --cov-report term-missing"
testpaths = ["tests",]

[tool.coverage.run]
source = ["testmodule"]
